	* IMPROVED: now checking number of pwd char is faster than before
	* IMPROVED: Updated README file with newest options
	* ADDED: option to change DB directory (--change-dir)
	* ADDED: option to change DB name (--change-name)
	* ADDED: quick help (--help)
	* ADDED: option to automatically update the main script (-u)
	* ADDED: possibility to delete one or more password
	* ADDED: possibility to change one or more password

(05/01/2012) - v1.1.991 (1.2-rc1)
	* IMPROVED: README with markdown features
	* FIXED: various bugs that caused the script to fails
	* IMPROVED: if the script is closed in the wrong way the DB now will be encryped
	* FIXED: some other minor things

(08/01/2012) - v1.2.0
	* NEWSTABLE RELEASE :)

(xx/yy/2012) - v1.9.901 (2.0-beta1)
	* NEW:   new UI (insert dialog + view/add/etc with button)
	* NEW:   yad has replaced zenity -------------------------------------------------------------------[done]
	* ADDED: sqlite db. Now your password are stored encrypted into an encrypted sqlite db :)
	* ADDED: group feature
	* ADDED: note feature
	* ADDED: pwd expiration date
	* ADDED: when you'll decrypt the db a screen will give you all your titles and you can choose what to display
	* ADDED: check db integrity with md5sum
	* ADDED: lock db with chattr +i
	* ADDED: check if password is dictionary based
	* ADDED: options to backup db
	* ADDED: choice if use 1 (GPG or OpenSSL) or 2 (GPG+OpenSSL) encryption methods. If you select 2, you are forced to use two differents pwds
	* ADDED: cli interface
	* ADDED: log file (wrong pwd, md5 error, backup info, etc)
	* ADDED: option to uninstall the script (--uninstall) ----------------------------------------------[done]
	* IMPROVED: core code have been revisited
	* IMPROVED: installer have been improved to match all the new changes (oxygen-gtk? + yad + bash v4)-[done]
	* IMPROVED: uninstaller have been improved to match all the new changes ----------------------------[done]
	* UPDATED: readme file has been updated